[package]
name = "gatewaysocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "2.1"
getopts = "0.2"
pnet = "0.29.0"
tokio = { version = "1.17.0", features = ["full"] }

[features]
default = []
std = []

#do it the way below, caught error
#error: couldn't read src/Packet.lib: stream did not contain valid UTF-8
#[lib]
#name = "addlib"
#path = "src/Packet.lib"
